# ImgDiffDitection

./: .gitignore  AGENTS.md  Handover.md  Issue8总结.md  README.md  restart-texlive-install.cmd  texlive-install.profile  异动算法整体逻辑说明0613.docx  项目源码导航与ONNX改造说明.md
build-onnx/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imagecmp_test.vcxproj  imagecmp_test.vcxproj.filters  lximagecmp.sln  lximagecmp.vcxproj  lximagecmp.vcxproj.filters
build-onnx/Release/: lximagecmp.exp  lximagecmp.lib
build-onnx/imagecmp_test.dir/Release/: imagecmp_test.exe.recipe
build-onnx/imagecmp_test.dir/Release/imagecmp_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  imagecmp_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-onnx/lximagecmp.dir/Release/: lximagecmp.dll.recipe
build-onnx/lximagecmp.dir/Release/lximagecmp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-onnx/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-onnx/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-onnx/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-onnx/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: Issue7总结.md  系统流程说明.tex
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/model-governance/: onnx-model-ledger.md
imagecmp_next/: CMakeLists.txt  P1_DATA_PROCESSING.md  README.md
imagecmp_next/include/imagecmp/: image_comparison_service.h
imagecmp_next/src/: characterize_main.cpp  image_comparison_service.cpp
imagecmp_next/tests/: image_comparison_service_test.cpp
imagecmp_py/: README.md  cli.py  requirements.txt  test_issue8.py  test_service.py
imagecmp_py/configs/: calibrated-20260722-v1.json  calibrated-20260723-issue8-v1.json  development-default-v1.json
imagecmp_py/imagecmp/: __init__.py  alignment.py  artifacts.py  compare.py  config.py  mapping.py  multi_component.py  references.py  result.py  roi.py  service.py  superpoint_lightglue.py
imagecmp_v2/: CMakeLists.txt  Laplacian.cpp  Makefile  ascend_infer.cpp  ascend_infer.h  base64.c  base64.h  deep_difference_detector.cpp  deep_difference_detector.h  image_matcher.cpp  image_matcher.h  imagecmp.cpp  imagecmp.h  imagecmpfind.cpp  ldc.cpp  ldc.h  onnx_model_contract_check.cpp  test.cpp  yidong_main.cpp  yidong_main_onnx.cpp
imagecmp_v2/.svn/: wc.db
imagecmp_v2/build-acl/: CMakeCache.txt  Makefile  cmake_install.cmake  test
imagecmp_v2/build-acl/20250731/: yolo.txt
imagecmp_v2/build-acl/release-imagecmp/: libopencv_core.so.4.4.0  libopencv_features2d.so.4.4.0  libopencv_flann.so.4.4.0  libopencv_highgui.so.4.4.0  libopencv_stitching.so.4.4.0  libopencv_video.so.4.4.0  libopencv_videoio.so.4.4.0  test
imagecmp_v2/deps-cv4.4/lib/: libopencv_calib3d.so.4.4.0  libopencv_gapi.so.4.4.0  libopencv_imgcodecs.so.4.4.0  libopencv_ml.so.4.4.0  libopencv_objdetect.so.4.4.0  libopencv_photo.so.4.4.0
imagecmp_v2/deps-cv4.4/lib/cmake/opencv4/: OpenCVModules-release.cmake  OpenCVModules.cmake
imagecmp_v2/onnx/: deep_difference_detector_onnx.cpp  image_matcher_onnx.cpp  ldc_onnx.cpp
imagecmp_v2/onnx_runtime/: onnx_pipeline.cpp  onnx_pipeline.h
test/: yolo.txt
tools/: analyze_calibration_batch.py  analyze_multireference_cases.py  audit_invalid_cases.py  compare_calibration_batches.py  diagnose_unreliable_cases.py  issue7_derive_configs.py  issue7_gate_breakdown.py  issue7_ncc_rescue_full.py  issue7_policy_verdicts.py  issue8_pressure_test.py  issue8_superpoint_alignment_audit.py  merge_issue8_superpoint_alignment_audit.py  run_all_test_calibration.py  test_analyze_calibration_batch.py
